--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h2 class="lightText">About</h2>
             </div>
             <div class="about-contents">
-                <p>Hello! I'm Pranal Siripurapu, a little bit about me -> I amk a Computer Science major at the University of Pittsburgh.
+                <p>Hello! I'm Pranal Siripurapu, a little bit about me -> I am a Computer Science major at the University of Pittsburgh.
                     My favourite work has been at the crossroads of design, development, and legal. passionate web developer and programmer
                     currently pursuing my studies. Beyond academics, I am always doing something creative, whether its using canva to 
                     building and publishing on Amazon KDP, or creating, editing, and publishing AI Music.
@@ -175,6 +175,65 @@
                 <p>View Full Project Archive <span class="right-arrow">&rarr;</span></p>
             </a>
         </section>
+
+        <section id="languages">
+            <div class="sticky-header">
+                <h2 class="lightText">Programming Languages</h2>
+            </div>
+            <div class="language-contents">
+
+                <div class="language-card">
+                <h3>Java</h3>
+                <div class="rating-bar"><span style="width: 60%;"></span></div>
+                </div>
+
+                <div class="language-card">
+                <h3>Python</h3>
+                <div class="rating-bar"><span style="width: 20%;"></span></div>
+                </div>
+
+                <div class="language-card">
+                <h3>HTML</h3>
+                <div class="rating-bar"><span style="width: 80%;"></span></div>
+                </div>
+
+                <div class="language-card">
+                <h3>CSS</h3>
+                <div class="rating-bar"><span style="width: 80%;"></span></div>
+                </div>
+
+                <div class="language-card">
+                <h3>JavaScript</h3>
+                <div class="rating-bar"><span style="width: 40%;"></span></div>
+                </div>
+
+            </div>
+
+            <div class="sticky-header">
+                <h2 class="lightText">Spoken Languages</h2>
+            </div>
+            <div class="language-contents">
+
+                <div class="language-card">
+                <h3>English</h3>
+                <div class="rating-bar"><span style="width: 100%;"></span></div>
+                </div>
+
+                <div class="language-card">
+                <h3>Telugu</h3>
+                <div class="rating-bar"><span style="width: 100%;"></span></div>
+                </div>
+
+                <div class="language-card">
+                <h3>Hindi</h3>
+                <div class="rating-bar"><span style="width: 60%;"></span></div>
+                </div>
+
+            </div>
+         </section>
+
+
+
 
         <section id="certifications">
     <div class="sticky-header">
