language bar added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,9 +21,10 @@
 <body id="top-of-page">
     <div class="underlay"></div>
     <header>
+
         <h1>Pranal Siripurapu</h1>
         <h2>Web Developer | Programmer | Student</h2>
-        <p>Looking for Part-Time or Internship roles with flexible schedule.</p>
+        <p>Looking for Part-Time positions and Internship roles with flexible schedule.</p>
         <nav>
             <a class="anchor-text" href="#about">
                 <!-- ADDED POST TUTORIAL -->
