--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <h1>Pranal Siripurapu</h1>
         <h2>Web Developer | Programmer | Student</h2>
-        <p>Looking for Part-Time positions and Internship roles with flexible schedule.</p>
+        <p>Looking for Part-Time and Internship positions with flexible schedule.</p>
         <nav>
             <a class="anchor-text" href="#about">
                 <!-- ADDED POST TUTORIAL -->
