--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="anchor-text" href="#about">
                 <!-- ADDED POST TUTORIAL -->
                 <div class="nav-line"></div>
-                <h4>About</h4>
+                <h4>About</h4>git 
             </a>
             <a class="anchor-text" href="#experience">
                 <div class="nav-line"></div>
