--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     </main>
     <footer>
         <p>
-            Coded in HTML & CSS by Pranal Siripurapu. Hosted on Netlify.
+            Coded in HTML & CSS by Pranal Siripurapu. Hosted on Cloudfare Pages.
         </p>
         <a href="#top-of-page" class="scroll-to-top">
             <i class="fa-solid fa-arrow-up"></i>
