Fixed language bars malfunctioning

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
         </nav>
         <p>+1 (425) 471-2947 | Pittsburgh, PA | pranalsiri5@gmail.com</p>
         <div class="social-link-container">
-            <a class="social-link" href="https://www.linkedin.com/in/jamezmcarthur/" target="_blank">
+            <a class="social-link" href="https://www.linkedin.com/in/pranalsiripurapu/" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
-            <a class="social-link" href="https://www.linkedin.com/in/jamezmcarthur/" target="_blank">
+            <a class="social-link" href="https://github.com/Shinrinyoku-Pranal" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a class="social-link" href="https://www.linkedin.com/in/jamezmcarthur/" target="_blank">
+            <a class="social-link" href="https://music.youtube.com/channel/UCH1JxwmEGP5SBJDEuz8ZI0A" target="_blank">
                 <i class="fa-brands fa-youtube"></i>
             </a>
-            <a class="social-link" href="https://www.linkedin.com/in/jamezmcarthur/" target="_blank">
-                <i class="fa-brands fa-twitter"></i>
+            <a class="social-link" href="https://open.spotify.com/artist/2aDXfGkd7DBcHxbo10kwTD" target="_blank">
+                <i class="fa-brands fa-spotify"></i>
             </a>
         </div>
     </header>
@@ -111,7 +111,7 @@
                 
             </div>
             <!-- MODIFIED POST TUTORIAL -->
-            <a href="/public/james-resme.pdf" target="_blank" class="anchor-text resume-link">
+            <a href="/public/Resume 2025.pdf" target="_blank" class="anchor-text resume-link">
                 <p>View Full Resume <i class="fa-solid fa-arrow-right anchor-icon"></i></p>
             </a>
         </section>
@@ -179,64 +179,71 @@
             </a>
         </section>
 
-        <section id="languages">
-            <div class="sticky-header">
-                <h2 class="lightText">Programming Languages</h2>
-            </div>
-            <div class="language-contents">
+         <section id="languages">
+  <div class="sticky-header">
+    <h2 class="lightText">Languages</h2>
+  </div>
 
-                <div class="language-card">
-                <h3>Java</h3>
-                <div class="rating-bar"><span style="width: 60%;"></span></div>
-                </div>
+  <div class="language-contents">
 
-                <div class="language-card">
-                <h3>Python</h3>
-                <div class="rating-bar"><span style="width: 20%;"></span></div>
-                </div>
+    <h3 class="language-category">Programming Languages</h3>
+    <div class="language-category-contents">
+      <div class="language-card">
+        <h3>Java</h3>
+        <div class="language-bar">
+          <div class="language-fill" style="--fill:60%;"></div>
+        </div>
+      </div>
+      <div class="language-card">
+        <h3>Python</h3>
+        <div class="language-bar">
+          <div class="language-fill" style="--fill:20%;"></div>
+        </div>
+      </div>
+      <div class="language-card">
+        <h3>HTML</h3>
+        <div class="language-bar">
+          <div class="language-fill" style="--fill:80%;"></div>
+        </div>
+      </div>
+      <div class="language-card">
+        <h3>CSS</h3>
+        <div class="language-bar">
+          <div class="language-fill" style="--fill:80%;"></div>
+        </div>
+      </div>
+      <div class="language-card">
+        <h3>JavaScript</h3>
+        <div class="language-bar">
+          <div class="language-fill" style="--fill:40%;"></div>
+        </div>
+      </div>
+    </div>
 
-                <div class="language-card">
-                <h3>HTML</h3>
-                <div class="rating-bar"><span style="width: 80%;"></span></div>
-                </div>
+    <h3 class="language-category">Spoken Languages</h3>
+    <div class="language-category-contents">
+      <div class="language-card">
+        <h3>English</h3>
+        <div class="language-bar">
+          <div class="language-fill" style="--fill:100%;"></div>
+        </div>
+      </div>
+      <div class="language-card">
+        <h3>Telugu</h3>
+        <div class="language-bar">
+          <div class="language-fill" style="--fill:100%;"></div>
+        </div>
+      </div>
+      <div class="language-card">
+        <h3>Hindi</h3>
+        <div class="language-bar">
+          <div class="language-fill" style="--fill:60%;"></div>
+        </div>
+      </div>
+    </div>
 
-                <div class="language-card">
-                <h3>CSS</h3>
-                <div class="rating-bar"><span style="width: 80%;"></span></div>
-                </div>
-
-                <div class="language-card">
-                <h3>JavaScript</h3>
-                <div class="rating-bar"><span style="width: 40%;"></span></div>
-                </div>
-
-            </div>
-
-            <div class="sticky-header">
-                <h2 class="lightText">Spoken Languages</h2>
-            </div>
-            <div class="language-contents">
-
-                <div class="language-card">
-                <h3>English</h3>
-                <div class="rating-bar"><span style="width: 100%;"></span></div>
-                </div>
-
-                <div class="language-card">
-                <h3>Telugu</h3>
-                <div class="rating-bar"><span style="width: 100%;"></span></div>
-                </div>
-
-                <div class="language-card">
-                <h3>Hindi</h3>
-                <div class="rating-bar"><span style="width: 60%;"></span></div>
-                </div>
-
-            </div>
-         </section>
-
-
-
+  </div>
+</section>
 
         <section id="certifications">
     <div class="sticky-header">
