--- a/index.html
+++ b/index.html
@@ -26,35 +26,28 @@
         <h2>Web Developer | Programmer | Student</h2>
         <p>Looking for Part-Time and Internship positions with flexible schedule.</p>
         <nav>
-            <div class="nav-links">
-                <a class="anchor-text" href="#about">
+            <a class="anchor-text" href="#about">
+                <!-- ADDED POST TUTORIAL -->
                 <div class="nav-line"></div>
                 <h4>About</h4>
-                </a>
-                <a class="anchor-text" href="#experience">
+            </a>
+            <a class="anchor-text" href="#experience">
                 <div class="nav-line"></div>
                 <h4>Experience</h4>
-                </a>
-                <a class="anchor-text" href="#projects">
+            </a>
+            <a class="anchor-text" href="#projects">
                 <div class="nav-line"></div>
                 <h4>Projects</h4>
-                </a>
-                <a class="anchor-text" href="#certifications">
+            </a>
+            <a class="anchor-text" href="#certifications">
                 <div class="nav-line"></div>
                 <h4>Certifications</h4>
-                </a>
-                <a class="anchor-text" href="#languages">
+            </a>
+            <a class="anchor-text" href="#languages">
                 <div class="nav-line"></div>
                 <h4>Languages</h4>
-                </a>
-            </div>
-
-            <!-- Mobile menu toggle -->
-            <button class="nav-toggle" aria-label="Toggle menu">
-                <i class="fa-solid fa-bars"></i>
-            </button>
+            </a>
         </nav>
-
         <p>+1 (425) 471-2947 | Pittsburgh, PA | pranalsiri5@gmail.com</p>
         <div class="social-link-container">
             <a class="social-link" href="https://www.linkedin.com/in/pranalsiripurapu/" target="_blank">
