--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 
             </div>
         </section>
-        <section id="Experience">
+        <section id="experience">
             <div class="sticky-header">
                 <h2 class="lightText">Experience</h2>
             </div>
