Fixed spelling in footer

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </main>
     <footer>
         <p>
-            Coded in HTML & CSS by Pranal Siripurapu. Hosted on Cloudfare Pages.
+            Coded in HTML & CSS by Pranal Siripurapu. Hosted on Cloudflare Pages.
         </p>
         <a href="#top-of-page" class="scroll-to-top">
             <i class="fa-solid fa-arrow-up"></i>
