Resume updated pdf

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 
             </div>
             <!-- MODIFIED POST TUTORIAL -->
-            <a href="/public/Resume 2025.pdf" target="_blank" class="anchor-text resume-link">
+            <a href="/downloads/Resume 2025.pdf" target="_blank" class="anchor-text resume-link">
                 <p>View Full Resume <i class="fa-solid fa-arrow-right anchor-icon"></i></p>
             </a>
         </section>
