Fixed Spelling mistakes and added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
             </div>
             <div class="about-contents">
                 <p>Hello! I'm Pranal Siripurapu, a little bit about me -> I am a Computer Science major at the University of Pittsburgh.
-                    My favourite work has been at the crossroads of design, development, and legal. passionate web developer and programmer
-                    currently pursuing my studies. Beyond academics, I am always doing something creative, whether its using canva to 
+                    My favourite work has been at the crossroads of design, development, and legal. Beyond academics, I am always doing something creative, whether its using canva to 
                     building and publishing on Amazon KDP, or creating, editing, and publishing AI Music.
                 </p>
                 
@@ -84,14 +83,14 @@
             </div>
             <div class="experience-contents">
                 <div class="experience-card">
-                    <p class="tenure">2024 - 2024</p>
+                    <p class="tenure">June 2024 - August 2024</p>
                     <div class="card-column">
                         <a class="card-header-link" href="https://www.vercible.com" target="_blank">
                             <h3 class="anchor-text card-header">AI/ML Internship · Vercible
                                 <i class="fa-solid fa-arrow-right anchor-icon"></i>
                             </h3>
                         </a>
-                            <p>Built a Custom database ChatGbot using the gpt 3.5 Turbo API. The bot provided the use with a list of 5 internships/summer camps that is baest suited for him based on GPA, Location, Major, and Time Period.</p>
+                            <p>Built a Custom database ChatBot using the gpt 3.5 Turbo API. Provided the user with a list of 5 internships/summer camps that is best suited for them based on GPA, Location, Major, and Time Period.</p>
 
                         <div class="tag-container">
                             <div class="tag">
