--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="certification-card">     
-                        <img src="https://cdn-icons-png.freepik.com/512/16034/16034390.png" alt="QRCode thumbnail" style="width: 70px; height:auto;"/>
+                        <img src="https://cdn-icons-png.freepik.com/512/16034/16034390.png" alt="Stress Relief" style="width: 70px; height:auto;"/>
                     <div class="card-column">
                         <a href="https://georelax.pages.dev/"_blank" class="card-header-link">
                             <h3 class="anchor-text card-header">Stress Relief Game
