Fixed project title

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <img src="https://cdn-icons-png.flaticon.com/512/1177/1177510.png" alt="QRCode thumbnail" style="width: 70px; height:auto;"/>
                     <div class="card-column">
                         <a href="https://qrstudio.pages.dev/"_blank" class="card-header-link">
-                            <h3 class="anchor-text card-header">RAG Chatbot
+                            <h3 class="anchor-text card-header">QR Code Generator Website
                                 <i class="fa-solid fa-arrow-right anchor-icon"></i>
                             </h3>
                         </a>
